# nhentai-dump

./: .gitignore  Cargo.toml
.github/workflows/: update.yml
migrations/2022-06-15-201020_tag/: up.sql
migrations/2022-06-15-213314_galleries/: down.sql  up.sql
src/: main.rs  models.rs  queries.rs  schema.graphql  schema.rs
src/queries/: id.graphql
