[package]
name = "nhentai-dump"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nhentai = "0.2"
tokio = { version = "*", features = ["full"] }
futures = "0.3"
diesel = { version = "1.4.4", features = ["sqlite", "chrono"] }
dotenv = "0.15.0"
chrono = "*"
indicatif = "0.16"